# drophawk

./: .bootstrap  .gitignore  CHANGELOG.md  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  domain.py  main.py  scheduler.py  scoring.py
app/feishu/: __init__.py  cards.py
config/: config.yaml  secrets.env.example
docs/: api.md  architecture.md  brand.md  data-sources.md  deployment.md  design-prompts.md  runbook.md
tests/: test_config.py  test_domain.py  test_feishu_cards.py  test_healthz.py  test_scoring.py
